@startuml
abstract class MenuItem{
    # String ten
    + MenuItem(String ten)
    + {abstract} void add(MenuItem item)
    + {abstract} void remove(MenuItem item)
    + {abstract} void hienThi(String prefix)
    + {abstract} double tinhGia()
}

class MonAn{
    - double gia
    + MonAn(String ten, double gia)
    + void add(MenuItem item)
    + void remove(MenuItem item)
    + void hienThi(String prefix)
    + double tinhGia()
}

class Combo{
    + Combo(String ten)
    + void add(MenuItem item)
    + void remove(MenuItem item)
    + void hienThi(String prefix)
    + double tinhGia()
}

MenuItem <|-- MonAn
MenuItem <|-- Combo
Combo o--> "*" MenuItem: items
@enduml